<resources>
    <string name="app_name">GenrenciadorFinanceiro</string>
    <string name="title_inicial">Seja bem vindo, para possamos dar continuidade por favor entre com uma conta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Digite seu Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Registar conta</string>
    <string name="action_sign_in_short">Entre com sua conta</string>
    <string name="welcome">"Bem vindo !"</string>
    <string name="invalid_username">Usuario invalido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Erro ao logar"</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_aplicacao">AplicacaoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_ssssssss">ssssssss</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_inicial">InicialActivity</string>
    <string name="textValor">Digite o Valor</string>
    <string name="TextCategoria">Digite a Categoria</string>
    <string name="TextDescrição">Digite uma descrição</string>
    <string name="TextEntrada">Entrada</string>
    <string name="TextSaida">Saida</string>
</resources>